# Nidium

./: .editorconfig  .gitignore  .gitmodules  .travis.yml  .ycm_extra_conf.py  CHANGES  COPYING  LICENSE  LICENSE_frontend  LICENSE_nidiumcore  LICENSE_server  Makefile  NativeArgs.h  NativeDB.cpp  NativeDB.h  NativeEvents.h  NativeFile.cpp  NativeFile.h  NativeFileIO.cpp  NativeFileIO.h  NativeFileStream.cpp  NativeFileStream.h  NativeHTTP.cpp  NativeHTTP.h  NativeHTTPListener.cpp  NativeHTTPListener.h  NativeHTTPParser.cpp  NativeHTTPParser.h  NativeHTTPStream.cpp  NativeHTTPStream.h  NativeHash.h  NativeIStreamer.h  NativeJS.cpp  NativeJS.h  NativeJSConsole.cpp  NativeJSConsole.h  NativeJSDB.cpp  NativeJSDB.h  NativeJSDebug.cpp  NativeJSDebug.h  (+66 more)
NativeJSCore/: .gitmodules  README.md  configure
NativeServer/: .gitignore  .gitmodules  README.md  configure
NativeStudio/: .gitignore  .gitmodules  configure
Nidium/: .gitignore  .travis.yml  .ycm_extra_conf.py  LICENSE_frontend  configure_server
UICore/: NATiVE.html  demo.ui.js  main.js
app/: Makefile  NativeUIInterface.h
audio/: Makefile  NativeAV.cpp  NativeAV.h  NativeAudio.cpp  NativeAudio.h  NativeAudioNode.cpp  NativeAudioNode.h  NativeAudioParameters.h  NativeVideo.cpp  NativeVideo.h  audio.gyp
av/: AV.cpp  AV.h  Audio.cpp  Audio.h  AudioNode.cpp  AudioNode.h  AudioNodeDelay.cpp  AudioNodeDelay.h  AudioNodeGain.cpp  AudioNodeGain.h  AudioParameters.h  NativeAV.cpp  NativeAV.h  NativeAudio.cpp  NativeAudio.h  NativeAudioNode.cpp  NativeAudioNode.h  NativeAudioNodeDelay.cpp  NativeAudioNodeDelay.h  NativeAudioNodeGain.cpp  NativeAudioNodeGain.h  NativeAudioParameters.h  NativeVideo.cpp  NativeVideo.h  Video.cpp  Video.h
ctypes/: dir-osx.js
doc/: core.json  core.md  gen.js
docs/: JSAV.cpp.py  JSCanvas.cpp.py  JSCanvas2DContext.cpp.py  JSConsole.cpp.py  JSDB.cpp.py  JSDebug.cpp.py  JSDebugger.cpp.py  JSDocument.cpp.py  JSExposer.h.py  JSFS.cpp.py  JSFile.cpp.py  JSFileIO.cpp.py  JSGlobal.cpp.py  JSGlobal.cppy.py  JSHTTP.cpp.py  JSHTTPServer.cpp.py  JSHttp.cpp.py  JSImage.cpp.py  JSKeyboard.cpp.py  JSModules.cpp.py  JSOS.cpp.py  JSProcess.cpp.py  JSSocket.cpp.py  JSStream.cpp.py  JSSystem.cpp.py  JSThread.cpp.py  JSVM.cpp.py  JSWebGL.cpp.py  JSWebSocket.cpp.py  JSWebSocketClient.cpp.py  JSWindow.cpp.py
framework/: NatBug.nap  NatProfiler.nap  index.nml  main.js  main.nml  main.nss  module.footer.nml  module.header.nml  sample.js  testLayer.js
gyp/: .gitignore  actions.gyp  all.gyp  angle.gyp  app.gyp  av.gyp  av.gypi  breakpad.gyp  breakpad_tools.gypi  common.gypi  config.gypi  crashreporter.gyp  gyp.sh  interface.gyp  interface.gypi  jsoncpp.gyp  libnidium.gyp  libnidium_android.gyp  libnidiumcore-tests.gyp  libnidiumcore.gyp  make.sh  native-requirements.deps  native-requirements.py  native-server.gyp  native.gyp  nativejscore-requirements.deps  nativejscore-requirements.py  nativejscore-unittests.gyp  nativejscore.gyp  nativeserver-requirement.deps  nativeserver-requirements.py  network.gyp  nidium-app.gypi  nidium-server.gyp  nidium.gyp  nidiumcore.gyp  skia.gypi  skia_defines.patch  skia_gl_config.h  system.gypi  (+1 more)
interface/: Makefile  NativeSystemInterface.h  NativeUIInterface.h  NativeUIInterface_base.cpp  SDL_keycode_translate.h  SystemInterface.h  UIInterface.cpp  UIInterface.h  UIInterface_base.cpp
linux/: build.sh  main.cpp
modules/: TestModule.cpp  all.gyp  (+5 more)
src/Frontend/app/android/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
src/Frontend/app/android/app/src/androidTest/java/com/nidium/android/: ExampleInstrumentedTest.java
src/Frontend/app/android/app/src/main/: AndroidManifest.xml
src/Frontend/app/android/app/src/main/java/com/nidium/android/: DevelopmentActivity.java  Extractor.java  Flinger.java  Keyboard.java  MainActivity.java  NMLFileAdapter.java  NidiumActivity.java  Nidroid.java
src/Frontend/app/android/app/src/main/java/org/libsdl/app/: SDLActivity.java
src/Frontend/app/android/app/src/main/res/drawable/: border_bottom.xml  startup.xml
src/Frontend/app/android/app/src/main/res/layout/: activity_main.xml  nml_list_item_row.xml
src/Frontend/app/android/app/src/main/res/values/: colors.xml  strings.xml  styles.xml
src/Frontend/app/android/app/src/test/java/com/nidium/android/: ExampleUnitTest.java
(+1654 files in other folders)
